terminal/terminal.css
#terminalWindow {
    margin: auto;
    width: 700px;
    font-family: "Inconsolata", monospace;
    border-radius: 5px;
    border: 1px solid #ccc;
    position: relative;
}

#titleBar {
    padding: 1px 5px;
    background-color: #dcdcdc;
}
#titleTitle {
    text-align: center;
}
#titleButtons {
    position: absolute;
}
#titleButtons span {
    display: inline-block;
    height: 11px;
    width: 11px;
    border-radius: 50%;
}

#terminal {
    background-color: #323232;
    color: #fff;
    padding: 1px 3px;
    cursor: default;
    min-height: 400px;
}
.commandOutput {
    white-space: pre;
}
#commandInput {
    background-color: transparent;
    border: none;
    color: inherit;
    font-family: inherit;
    font-size: inherit;
    outline: none;
    cursor: inherit;
    width: 300px;
    padding: 0;
    margin: 0;
}

